JsonArray and JsonObject can chain calls to instantiate them with data inline.